plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'

    //SonarCloud
    id "org.sonarqube" version "4.4.1.3373"
    //SonarCloud test coverage
    id "jacoco"
    //CheckStyle
    id "checkstyle"
    //git hooks
    id "com.star-zero.gradle.githook" version "1.2.1"
    id "it.nicolasfarabegoli.conventional-commits" version "3.1.3"
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'
//noinspection GroovyUnusedAssignment
sourceCompatibility = '17'


repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

fileTree(dir: 'setting', include: '*.gradle').each { file ->
    apply from: file
}
